--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,8 @@ development:
   pool: 5
   username: root
   password:
-  socket: /var/run/mysqld/mysqld.sock
+  # socket: /var/run/mysqld/mysqld.sock
+  host: localhost
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -35,7 +36,8 @@ test: &TEST
   pool: 5
   username: root
   password:
-  socket: /var/run/mysqld/mysqld.sock
+  # socket: /var/run/mysqld/mysqld.sock
+  host: localhost
 
 production:
   adapter: mysql
@@ -45,7 +47,8 @@ production:
   pool: 5
   username: root
   password: 
-  socket: /var/run/mysqld/mysqld.sock
+  # socket: /var/run/mysqld/mysqld.sock
+  host: localhost
 
 cucumber:
   <<: *TEST
